// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportsReducer should handle all defined error types: rejected types GET_MERGE_REPORT 1`] = `
{
  "result": {
    "error": true,
    "errorMessage": "ERROR",
    "errorStatus": 0,
    "fulfilled": false,
    "metaData": undefined,
    "metaId": undefined,
    "metaQuery": undefined,
    "pending": false,
    "update": false,
  },
  "type": "GET_MERGE_REPORT_REJECTED",
}
`;

exports[`ReportsReducer should handle all defined fulfilled types: fulfilled types GET_MERGE_REPORT 1`] = `
{
  "result": {
    "data": {
      "test": "success",
    },
    "date": undefined,
    "error": false,
    "errorMessage": "",
    "errorStatus": undefined,
    "fulfilled": true,
    "metaData": undefined,
    "metaId": undefined,
    "metaQuery": undefined,
    "pending": false,
    "update": false,
  },
  "type": "GET_MERGE_REPORT_FULFILLED",
}
`;

exports[`ReportsReducer should handle all defined pending types: pending types GET_MERGE_REPORT 1`] = `
{
  "result": {
    "error": false,
    "errorMessage": "",
    "errorStatus": undefined,
    "fulfilled": false,
    "metaData": undefined,
    "metaId": undefined,
    "metaQuery": undefined,
    "pending": true,
    "update": false,
  },
  "type": "GET_MERGE_REPORT_PENDING",
}
`;
